<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <artifactId>TrafficControlSystem</artifactId>
        <groupId>fontys</groupId>
        <version>1.0-SNAPSHOT</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>

    <artifactId>GUI</artifactId>
    <packaging>jar</packaging>
    <name>GUI</name>

    <dependencies>
        <dependency>
            <groupId>fontys</groupId>
            <artifactId>Interfaces</artifactId>
            <version>1.0-SNAPSHOT</version>
            <type>jar</type>
        </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-controls</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-fxml</artifactId>
                <version>${javafx.version}</version>
            </dependency>

            <dependency>
                <groupId>fontys</groupId>
                <artifactId>BusinessLogic</artifactId>
                <version>1.0-SNAPSHOT</version>
                <type>jar</type>
            </dependency>

            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>testfx-junit5</artifactId>
                <version>4.0.15-alpha</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>testfx-junit</artifactId>
                <version>4.0.15-alpha</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>testfx-core</artifactId>
                <version>4.0.15-alpha</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <groupId>org.testfx</groupId>
                <artifactId>openjfx-monocle</artifactId>
                <version>jdk-12.0.1+2</version>
                <scope>test</scope>
                <exclusions>
                    <exclusion>
                        <groupId>org.openjfx</groupId>
                        <artifactId>javafx-base</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <groupId>no.tornado</groupId>
                <artifactId>tornadofx-controls</artifactId>
                <version>1.0.6</version>
            </dependency>

    </dependencies>

    <properties>
        <maven.compiler.source>15</maven.compiler.source>
        <maven.compiler.target>15</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <javafx.version>15.0.1</javafx.version>
        <exec.mainClass>GUI_module/frontend.Simulation</exec.mainClass>
        <surefire.opens>
            --add-opens GUI_module/executables=ALL-UNNAMED
            --add-opens javafx.graphics/com.sun.javafx.application.ParametersImpl=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
            --add-opens javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
            --add-exports javafx.graphics/com.sun.glass.ui=ALL-UNNAMED
        </surefire.opens>
    </properties>

</project>